--- a/src/components/SliderStyles.css
+++ b/src/components/SliderStyles.css
@@ -14,14 +14,14 @@
 }
 
 .slick-dots li button:before {
-  font-size: 40px;
+  font-size: 20px;
   color: #a0aec0;
   opacity: 0.75;
   transition: all 0.3s ease;
 }
 
 .slick-dots li.slick-active button:before {
-  color: #39ff14;
+  color: #1434cb;
   opacity: 1;
 }
 
